--- a/install
+++ b/install
@@ -1,4 +1,10 @@
-yum install -y http://yum.puppetlabs.com/el/6/products/i386/puppetlabs-release-6-6.noarch.rpm http://www.mirrorservice.org/sites/dl.fedoraproject.org/pub/epel/6/i386/epel-release-6-8.noarch.rpm vim-enhanced
+OS_MAJ_VERSION=$(rpm -qa \*-release | grep -Ei "oracle|redhat|centos" | cut -d"-" -f3)
+
+if [ "$OS_MAJ_VERSION" -eq 6 ]; then
+  yum install -y http://yum.puppetlabs.com/puppetlabs-release-el-6.noarch.rpm http://www.mirrorservice.org/sites/dl.fedoraproject.org/pub/epel/6/i386/epel-release-6-8.noarch.rpm
+elif [ "$OS_MAJ_VERSION" -eq 7 ]; then
+  yum install -y http://yum.puppetlabs.com/puppetlabs-release-el-7.noarch.rpm http://www.mirrorservice.org/sites/dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.noarch.rpm
+fi
 yum -y install puppet
 mkdir -p /tmp/modules
 puppet module install stephenrjohnson/puppet --modulepath=/tmp/modules
