--- a/install
+++ b/install
@@ -1,6 +1,26 @@
-yum install -y http://yum.puppetlabs.com/el/6/products/i386/puppetlabs-release-6-6.noarch.rpm http://www.mirrorservice.org/sites/dl.fedoraproject.org/pub/epel/6/i386/epel-release-6-8.noarch.rpm
-yum -y install puppet
-mkdir -p /tmp/modules
-puppet module install stephenrjohnson/puppet --modulepath=/tmp/modules
-puppet apply --modulepath=/tmp/modules --execute "class{'::puppet::master':}"
-rm -rf /tmp/modules
+echo "======================================================================================"
+echo ""
+echo "Puppet Server Install"
+echo ""
+echo "This script will PuppetServer on a CentOS server."
+echo ""
+echo "======================================================================================"
+echo ""
+echo "=> Getting version number ..."
+OS_MAJ_VERSION=$(rpm -qa \*-release | grep -Ei "oracle|redhat|centos" | cut -d"-" -f3)
+echo "=> Done!"
+echo "=> Adding Puppetlabs Yum repo ..."
+yum install -y http://yum.puppetlabs.com/puppetlabs-release-el-"$OS_MAJ_VERSION".noarch.rpm > /dev/null 2>&1
+echo "=> Done!"
+echo "=> Installing Puppet Server ..."
+yum install puppetserver  > /dev/null 2>&1
+echo "=> Done!"
+echo "=> Setting some lower memory limits ..."
+sed -i 's/-Xms2g -Xmx2g -XX:MaxPermSize=256m/-Xms512m -Xmx512m -XX:MaxPermSize=256m/g' /etc/sysconfig/puppetserver
+echo "=> Done!"
+echo "=> Setting Puppet Server to start on boot ..."
+chkconfig puppetserver on  > /dev/null 2>&1
+echo "=> Done!"
+echo "=> Starting Puppet Server ..."
+service puppetserver start  > /dev/null 2>&1
+echo "=> Done!"
