--- a/install
+++ b/install
@@ -1,12 +1,12 @@
 echo "======================================================================================"
 echo ""
-echo "Puppet Server Install"
+echo "Puppet Server Installation"
 echo ""
-echo "This script will PuppetServer on a CentOS server."
+echo "This script will insall PuppetServer on a RHEL / CentOS server.."
 echo ""
 echo "======================================================================================"
 echo ""
-echo "=> Getting version number ..."
+echo "=> Getting OS version ..."
 OS_MAJ_VERSION=$(rpm -qa \*-release | grep -Ei "oracle|redhat|centos" | cut -d"-" -f3)
 echo "=> Done!"
 echo "=> Adding Puppetlabs Yum repo ..."
@@ -24,3 +24,16 @@ echo "=> Done!"
 echo "=> Starting Puppet Server ..."
 service puppetserver start  > /dev/null 2>&1
 echo "=> Done!"
+echo ""
+echo "======================================================================================"
+echo ""
+echo "Puppet Server installed, depending on how much RAM you have consider updating the 512m"
+echo "on the line which contains;"
+echo ""
+echo "-Xms512m -Xmx512m -XX:MaxPermSize=256m"
+echo ""
+echo "in /etc/sysconfig/puppetserver and then restart the service with;"
+echo ""
+echo "service puppetserver restart"
+echo ""
+echo "======================================================================================"
